--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -18,7 +18,7 @@
 
         <div class="flex items-center justify-between my-5">
           Vous avez deja un compte ?
-          <a href="{{ path('app_register') }}">Connectez vous.</a>
+          <a href="{{ path('app_login') }}">Connectez vous.</a>
         </div>
       </div>
     </div>
