--- a/templates/checkout/index.html.twig
+++ b/templates/checkout/index.html.twig
@@ -56,7 +56,7 @@
                 >
               </div>
               {# <!--PAYMENT PART--> #}
-              <div class="">
+              {# <div class="">
                 <span>Choisir le mode de paiement</span>
                 <div class="flex gap-5 my-5">
                   <label class="payment-option relative cursor-pointer">
@@ -99,7 +99,7 @@
                     />
                   </label>
                 </div>
-              </div>
+              </div> #}
               <span class="text-grey-500 text-xs cursor-not-allowed"
                 >Finaliser maintenant votre commande et faites vous livrez</span
               >
