--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -75,5 +75,8 @@
         {% endif %}
       </div>
     </div>
+{% endblock %}
 
+{% block javascripts_bottom %}
+    <script src="{{ asset('scripts/home-page.js') }}"></script>
 {% endblock %}
