--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -47,7 +47,7 @@
                 <i class="fa fa-search" aria-hidden="true"></i>
             </button>
             {% if app.user %}
-                <a href="{{ path('app_logout') }}" id="user-button">
+                <a href="{{ path('app_profile') }}" id="user-button">
                     <i class="fa fa-user-circle" aria-hidden="true"></i>
                 </a>
             {% else %}
