--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -66,7 +66,12 @@
 
         {% include 'partials/footer.html.twig' %}
 
-        <script src="{{ asset('scripts/script.js') }}"></script>
+        <script src="{{ asset('scripts/script.js') }}">
+            
+        </script>
+
+        {% block javascripts_bottom %}{% endblock %}
+
         <!--
             - ionicon link
         -->
