--- a/templates/product_detail/index.html.twig
+++ b/templates/product_detail/index.html.twig
@@ -145,6 +145,6 @@
     </div>
 {% endblock %}
 
-{% block javascripts_bottom %}
+{# {% block javascripts_bottom %}
      <script src="{{ asset('scripts/detail-page.js') }}"></script>
-{% endblock %}
+{% endblock %} #}
