--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -78,5 +78,5 @@
 {% endblock %}
 
 {% block javascripts_bottom %}
-    <script src="{{ asset('scripts/home-page.js') }}"></script>
+    <script src="{{ asset('/scripts/home-page.js') }}"></script>
 {% endblock %}
