--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -112,3 +112,11 @@
       </div>
     </div>
 {% endblock %}
+
+{% block javascripts_bottom %}
+  <script>
+      function updateValue(value) {
+        document.getElementById('rangeValue').innerText = value
+      }
+  </script>
+{% endblock %}
